Added fake volumes scripts

--- a/fake-vm-component-scripts/Dockerfile
+++ b/fake-vm-component-scripts/Dockerfile
@@ -1,6 +1,7 @@
 FROM qubell/python-scripting
 
-RUN mkdir /vms
-RUN pip3 install pymongo && pip3 install click
+RUN mkdir /vms && mkdir /volumes
+RUN pip3 install click
 
 ADD /fake-vm/*.py /fake-vm/
+ADD /fake-volume/*.py /fake-volume/
